2014-07-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (config_is_initialized): Fix declaration.
	* common-src/conffile.h: Comment typo.

2014-07-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (config_is_initialized): Fix prototype.

2014-07-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (check_security): Take a new service
	  argument.
	* common-src/amanda.h (check_security): Change prototype.
	* common-src/conffile.c (config_is_initialized): New functionto return
	  if the config is initialized.
	* common-src/conffile.h (config_is_initialized): New prototype.
	* common-src/debug.c: (debug_unlink_old): Return if config is not
	  initialized.
	* server-src/amidxtaped.pl: Add "amidxtaped" as argument to
	  check_bsd_security.
	* server-src/amindexd.c: Add "amindexd" as argument to check_security.
	* perl/Amanda/Util.swg (check_security_fd): Take a new service
	  argument, pass it to check_security.
	* perl/Amanda/ClientService.pm (check_bsd_security): Take a new
	  service argument, pass it to Amanda::Util::check_security.

2014-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-11  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski <orion@cora.nwra.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-10  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/script-email.pl: Remove $args.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/script-email.pl: Accept all characters in mailto.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix curl version check for
	  CURLE_SSL_CACERT_BADFILE.

2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Amcheck.pl: Fix for --without-client.
